changed background color of button on karaoke cards

--- a/app/views/pages/corporate_karaoke.html.erb
+++ b/app/views/pages/corporate_karaoke.html.erb
@@ -1,3 +1,8 @@
 <div class="container">
   <h1>CORPORATE KARAOKE</h1>
+  <h4>INFO</h4>
+  <p>
+    It’s time to become a star! Quiz Dog is far from a one-trick puppy. Make it a work function/private party to remember with our fully trained hosts (each one of them a consummate show-off)! Dancing Queen? Sweet Caroline? Anarchy in the UK? There isn’t a song we can’t provide, so start your vocal exercises, get a bit of Dutch courage, and sing the night away.
+    Please contact us for more information.
+</p>
 </div>
