--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,7 @@
 
     <div class="row category-cards karaoke-cards gx-0 justify-content-center">
 
-      <div class="card category-card m-2 col-lg-3 col-md-3 col-sm-12 border-0 bg-transparent d-flex">
+      <div class="card category-card karaoke-card m-2 col-lg-3 col-md-3 col-sm-12 border-0 bg-transparent d-flex">
         <%= link_to corporate_karaoke_path do %>
         <div class="quizzing-category-img-1 category-image position-relative">
           <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
@@ -90,7 +90,7 @@
       </div>
 
 
-      <div class="card category-card m-2 col-lg-3 col-md-3 col-sm-12 border-0 bg-transparent">
+      <div class="card category-card karaoke-card m-2 col-lg-3 col-md-3 col-sm-12 border-0 bg-transparent">
         <%= link_to piano_karaoke_path do %>
         <div class="quizzing-category-img-2 category-image position-relative">
           <h4 class="card-title font-weight-bold align-self-end">PIANO</h4>
