--- a/app/views/pages/private.html.erb
+++ b/app/views/pages/private.html.erb
@@ -1,3 +1,10 @@
 <div class="container">
   <h1>PRIVATE</h1>
+  <p>
+  Info
+
+Looking to throw a party and need the perfect ice breaker to get things going? There’s nothing like a fantastic quiz to get things really cooking! We’ve hosted quizzes at weddings, birthday parties, floating down the Thames, even at a funeral. If you want to give your private function some real pop, drop us a line.
+
+Contact us for rates and further details.
+</p>
 </div>
