--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,8 +53,6 @@
   font-weight: lighter;
 }
 
-
-
 .quizzing-category-img-1 {
   background-image: url("smile.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
@@ -91,6 +89,12 @@
   // margin: 0 5px 10px 0;
   border-radius: 5px;
   font-family: $lovelo;
+}
+
+.karaoke-cards {
+  .card-title {
+    background-color: $orange;
+  }
 }
 
 @media (min-width: 768px) {
