edited dropdown menu and added text to WHO WE ARE section

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,3 +102,11 @@
     justify-content: space-around;
   }
 }
+
+// WHO WE ARE SECTION
+
+.text-bubble {
+  background-color: $yellow;
+  padding: 1.5rem;
+  border-radius: 5px;
+}
