--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -102,16 +102,40 @@
 </div>
 
 <%# WHO WE ARE SECTION %>
-<div id="who-we-are-section" class="d-flex flex-column">
+<div id="who-we-are-section" class="d-flex flex-column align-items-center container-lg">
   <h1 class="d-flex justify-content-center">WHO WE ARE</h1>
+
+  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
+    <h4 class="d-flex justify-content-center">JOE AND DOGS</h4>
+    <div class="text-bubble">
+      <p class="d-flex justify-content-center"> Quiz Dog was founded in 2019 (a historically brilliant year to start any business) after Joe had worked for many years in the industry. We wanted to do things differently. Focussing on fun, sustainability, and dynamic hosting. </p>
+      <p>Starting in Peckham and Deptford, we now span across the capital (and even have an event in the USA). Our goal is to expand across the country and beyond, providing the best quizzing event it’s possible to have.</p>
+      <p class="mb-0">Where do dogs come into it? Joe likes dogs. It’s as simple as that. Just so happens that we are just like a pack of playful, adventurous, ol' faithfuls ourselves. Please bring your dogs along to the quiz. They’ll be on Instagram immediately!</p>
+    </div>
+  </div>
+
+  <%# (link to Instagram here) %>
 </div>
 
-<%# WHO WE ARE SECTION %>
-<div id="contact-section" class="d-flex flex-column">
+<h4 class="d-flex justify-content-center">OUR HOSTS</h4>
+
+<h1>SUSTAINABILITY</h1>
+<h4>Carbon Footprintp</h4>
+<p>
+  We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
+  We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
+</p>
+
+<h4>Planting trees, ecologi online</h4>
+
+<p>
+  One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
+  Click here to see how many trees we’ve planted!
+</p>
+
+<div id="contact-section" class="d-flex flex-column container-lg align-center">
   <h1 class="d-flex justify-content-center">CONTACT QUIZDOG</h1>
 </div>
-
-
 <%# TESTIMONIALS %>
 <%# <div class="row justify-content-evenly bg-success">
   <div class="col-3">
