--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,7 @@
         <%= link_to "Quizzing", "#{root_path}#quizzing-section", class: "dropdown-item" %>
         <%= link_to "Karaoke", "#{root_path}#karaoke-section", class: "dropdown-item" %>
         <%= link_to "Who we are", "#{root_path}#who-we-are-section", class: "dropdown-item" %>
-        <%= link_to "Access", "#{root_path}#contact-section", class: "dropdown-item" %>
-        <%= link_to "Quizdex", "#", class: "dropdown-item" %>
+        <%= link_to "Access Quizdex", "#{root_path}#contact-section", class: "dropdown-item" %>
       </div>
   </div>
 </div>
