--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -14,22 +14,20 @@
   <p>
 </div>
 
-<div class="container container-venues-map">
+<div class="container-lg container-venues-map">
   <div class="cards">
     <% @venues.each do |venue| %>
-    <div class="card-venue-category">
+    <div class="card-venue">
       <% if venue.photo %>
       <%= cl_image_tag venue.photo.key %>
       <% end %>
-      <div class="card-venue-info">
-        <h5><%= venue.name %></h5>
-        <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %>
+      <div class="card-venue-title">
+        <h6><%= venue.name %></h6>
+      </div>
           <%# <%= cl_image_tag venue.quizmaster.photo.key %>
-        </p>
-        <div class="card-venue-time">
-          <p><%= venue.day_of_the_week.upcase %> at</p>
-          <p><%= venue.time.strftime('%H:%M') %></p>
-        </div>
+      <div class="card-venue-info">
+        <p class="fw-bold"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
+        <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %> </p>
         <p>
           <%# <i class="fa-sharp fa-solid fa-location-dot"></i> %>
           <%= venue.address.partition(" London ").first%>
