--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,7 +81,7 @@
           <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
         </div>
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text bold-trial">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
         <% end %>
       </div>
