restyled venues page with banner, map below it and then cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,5 @@
 
 // CAROUSEL
-.bold-trial {
-  font-weight: bold;
-}
-
 #home-page-carousel {
   position: relative;
   display: flex;
@@ -76,7 +72,7 @@
 .category-image {
   position: relative;
   height: 0;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio, adjust as needed */
+  padding-bottom: 56.25%;
   background-size: cover;
   background-position: center;
   border-radius: 5px;
@@ -87,7 +83,7 @@
 
 .card-title {
   position: absolute;
-  bottom: 10px; /* Adjust as needed for your desired vertical position */
+  bottom: 10px;
   padding: 5px 10px 0px;
   background-color: $yellow;
   // margin: 0 5px 10px 0;
