--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,16 +9,18 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 260px;
-  height: 285px;
+  width: 300px;
+  height: 240px;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  margin-bottom: 2rem;
 }
 
 .card-venue img {
-  height: 50%;
+  height: 65%;
   width: 100%;
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   object-fit: cover;
   position: relative;
 }
@@ -27,7 +29,7 @@
 .card-venue-title {
   align-items: center;
   position: absolute;
-  margin-top: 0.5rem;
+  margin-top: 120px;
 
 
   h6 {
@@ -43,6 +45,19 @@
   flex-direction: column;
   align-items: center;
   padding: 0.5rem;
+
+  .venue-day-time {
+    font-weight: bold;
+  }
+  .venue-address {
+    font-size: small;
+    color: grey;
+  }
+
+  .venue-phone-number {
+    font-size: small;
+    color: grey;
+  }
 }
 
 .card-venue-info p {
