--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="container">
   <h1>QUIZDOG - ADMIN</h1>
   <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
@@ -13,51 +14,45 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
       <%= link_to "Create a new VENUE!", new_venue_path %>
-        <div class="admin-cards">
-          <% @venues.each do |venue| %>
-          <div class="card-venue-category card-longer">
-          <%= cl_image_tag venue.photo.key %>
+
+      <div class="cards">
+        <% @venues.each do |venue| %>
+        <div class="card-venue-admin">
+          <div class="card-venue admin-card-venue">
+            <% if venue.photo %>
+            <%= cl_image_tag venue.photo.key %>
+            <% end %>
+            <div class="card-venue-title">
+              <h6><%= venue.name %></h6>
+            </div>
             <div class="card-venue-info">
-              <h5><%= venue.name %></h5>
-              <% if venue.quizmaster %>
-              <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %>
-              <%# <%= cl_image_tag venue.quizmaster.photo.key %>
-              <% end %>
-              </p>
-              <div class="card-venue-time">
-                <p><%= venue.day_of_the_week.upcase %> at</p>
-                <p><%= venue.time.strftime('%H:%M') %></p>
-              </div>
-              <p>
-                <%# <i class="fa-sharp fa-solid fa-location-dot"></i> %>
-                <%= venue.address.partition(" London ").first%>
-                <%= venue.address.partition(" London ").last%>
-              </p>
-              <p>
-                <%# <i class="fa-solid fa-square-phone"></i> %>
-                <%= venue.phone_number %>
-              </p>
+              <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
+              <%# <p class="venue-hosted-by">hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster)%> </p>
+              <p class="venue-address"> <%= venue.address.partition(" London ").first%><%= venue.address.partition(" London ").last%></p>
+              <p class="venue-phone-number"><%= venue.phone_number %></p>
             </div>
-            <div class="admin-cards-buttons">
-              <%= link_to "Edit", edit_venue_path(venue) %>
-              <%= link_to "Delete", venue_path(venue), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-            </div>
+          </div>
+          <div class="admin-card-buttons d-flex justify-content-evenly">
+            <%= link_to "Edit", edit_venue_path(venue), class: "btn btn-success" %>
+            <%= link_to "Delete", venue_path(venue), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+          </div>
         </div>
         <% end %>
-        </div>
+      </div>
     </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <h2>QUIZMASTERS</h2>
-      <%= link_to "Create a new QUIZMASTER!", new_quizmaster_path %>
-      <% @quizmasters.each do |quizmaster| %>
-        <h2><%= quizmaster.name %></h2>
-        <p><%= quizmaster.profile %></p>
-          <% quizmaster.venues.each do |venue| %>
-            <p><%= venue.name %></p>
-          <% end %>
-        <%= link_to "Edit", edit_quizmaster_path(quizmaster) %>
-        <%= link_to "Delete", quizmaster_path(quizmaster), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+  </div>
+
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <h2>QUIZMASTERS</h2>
+    <%= link_to "Create a new QUIZMASTER!", new_quizmaster_path %>
+    <% @quizmasters.each do |quizmaster| %>
+      <h2><%= quizmaster.name %></h2>
+      <p><%= quizmaster.profile %></p>
+      <% quizmaster.venues.each do |venue| %>
+      <p><%= venue.name %></p>
       <% end %>
-    </div>
+      <%= link_to "Edit", edit_quizmaster_path(quizmaster) %>
+      <%= link_to "Delete", quizmaster_path(quizmaster), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+    <% end %>
   </div>
 </div>
