--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -47,6 +47,14 @@
     grid-template-columns: 1fr;
   }
 
+  .banner-image-venues {
+    background-image: none;
+    background-color: $yellow;
+  }
+
+  .banner-container {
+    margin-bottom: 9rem;
+  }
   #map {
     display: none;
   }
@@ -76,7 +84,7 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
