--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <%# MAP and VENUE CARDS %>
-<div class="container-xl d-flex flex-column align-items-center">
+<div class="container-lg d-flex flex-column align-items-center">
   <h1 class="d-flex justify-content-center mt-5 mb-3">OUR PUBS</h1>
     <div id="map" class="mb-4"
       data-controller="map"
@@ -35,7 +35,6 @@
         <div class="card-venue-title">
           <h6><%= venue.name %></h6>
         </div>
-            <%# <%= cl_image_tag venue.quizmaster.photo.key %>
         <div class="card-venue-info">
           <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
           <%# <p class="venue-hosted-by">hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %> </p>
