added quizmaster cards to homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,15 +6,15 @@
 }
 
 .bg-img-1 {
-  background-image: url('banner.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('carousel-1.svg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .bg-img-2 {
-  background-image: url('banner1.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('carousel-2.svg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .bg-img-3 {
-  background-image: url('banner2.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('carousel-3.svg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .carousel-image {
