--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -89,93 +89,7 @@
   }
 }
 
-.utilitarian-button-primary {
-  background-image: linear-gradient(#f7f8fa ,#e7e9ec);
-  border-color: #adb1b8 #a2a6ac #8d9096;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 3px;
-  box-shadow: rgba(255,255,255,.6) 0 1px 0 inset;
-  box-sizing: border-box;
-  color: #0f1111;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Amazon Ember",Arial,sans-serif;
-  font-size: 14px;
-  height: 29px;
-  font-size: 13px;
-  outline: 0;
-  overflow: hidden;
-  padding: 0 11px;
-  text-align: center;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-}
-
-.utilitarian-button-primary:active {
-  border-bottom-color: #a2a6ac;
-}
-
-.utilitarian-button-primary:active:hover {
-  border-bottom-color: #a2a6ac;
-}
-
-.utilitarian-button-primary:hover {
-  border-color: #a2a6ac #979aa1 #82858a;
-}
-
-.utilitarian-button-primary:focus {
-  border-color: #e77600;
-  box-shadow: rgba(228, 121, 17, .5) 0 0 3px 2px;
-  outline: 0;
-}
-
-
-.utilitarian-button-secondary {
-  background-image: linear-gradient(#f7f8fa ,#e7e9ec);
-  border-color: $quiz-dog-red;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 3px;
-  box-shadow: rgba(255,255,255,.6) 0 1px 0 inset;
-  box-sizing: border-box;
-  color: #0f1111;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Amazon Ember",Arial,sans-serif;
-  font-size: 14px;
-  height: 29px;
-  font-size: 13px;
-  outline: 0;
-  overflow: hidden;
-  padding: 0 11px;
-  text-align: center;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-}
-
-.utilitarian-button-secondary:active {
-  border-bottom-color: #a2a6ac;
-}
-
-.utilitarian-button-secondary:active:hover {
-  border-bottom-color: #a2a6ac;
-}
-
-.utilitarian-button-secondary:hover {
-  border-color: #a2a6ac #979aa1 #82858a;
-}
-
-.utilitarian-button-secondary:focus {
-  border-color: #e77600;
-  box-shadow: rgba(228, 121, 17, .5) 0 0 3px 2px;
-  outline: 0;
+// buttons for the ADMIN SECTION
+.btn-create {
+  margin: 10px 0;
 }
