fixed bug by deleting quizmaster_id from validations:

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -2,7 +2,9 @@
 
 <div class="container">
   <h1 class="d-flex justify-content-center mb-1">QUIZDOG ADMIN</h1>
-  <%= link_to "Log out", destroy_user_session_path, class: "d-flex justify-content-center", data: {turbo_method: :delete} %>
+  <div class="w-20">
+    <%= link_to "Log out", destroy_user_session_path, class: "d-flex justify-content-center", data: {turbo_method: :delete} %>
+  </div>
   <%# VENUES TAB SECTION %>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
