added some styling

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -55,16 +55,22 @@
             <% end %>
             <h4><%= quizmaster.name %></h4>
             <p><%= quizmaster.profile %></p>
+              <h6><%= quizmaster.name %>'s PUBS</h6>
             <div class="quizmaster-venues">
-              <% quizmaster.venues.each do |venue| %>
-                <p><%= venue.name %></p>
+              <% if quizmaster.venues.empty? %>
+                <p>No pubs yet</p>
+              <% else %>
+                <% quizmaster.venues.each do |venue| %>
+                  <p><%= venue.name %></p>
+                <% end %>
               <% end %>
             </div>
+            <div class="admin-quizmaster-buttons">
+              <%= link_to "Edit", edit_quizmaster_path(quizmaster), class: "btn btn-primary" %>
+              <%= link_to "Delete", quizmaster_path(quizmaster), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+            </div>
           </div>
-          <div class="admin-cards-buttons">
-            <%= link_to "Edit", edit_quizmaster_path(quizmaster), class: "btn btn-primary" %>
-            <%= link_to "Delete", quizmaster_path(quizmaster), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-          </div>
+
         </div>
         <% end %>
       </div>
